[package]
name = "async-log"
version = "1.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/async-log"
documentation = "https://docs.rs/async-log"
description = "Async tracing capabilities for the log crate."
keywords = ["async", "log", "trace", "span", "macro"]
categories = ["asynchronous", "command-line-utilities", "development-tools", "text-processing", "web-programming"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = ["std", "kv_unstable"] }
backtrace = "0.3.34"
async-log-attributes = { path = "async-log-attributes", version = "1.0.1" }

[dev-dependencies]
femme = "1.2.0"

[workspace]
members = [
  ".",
  "async-log-attributes",
]
